FIX(form.css,BaseSelect/index.css) -  add new gap for form__data, for select buttons add cursor, add cursor select li and select__head,add for select list background

--- a/assets/styles/blocks/form.css
+++ b/assets/styles/blocks/form.css
@@ -74,6 +74,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    cursor: pointer;
 }
 
 @media (min-width: 700px) {
@@ -229,7 +230,7 @@
 
 .form__data {
     display: flex;
-    gap: 10px;
+    gap: 4px;
     flex-direction: column;
     width: 100%;
 }
